# interbuf-cxx

./: CMakeLists.txt
cmake/: interbufConfig.cmake.in
example/rdparse/: CMakeLists.txt  main.cc
interbuf/: CMakeLists.txt  basedefs.h  datatype.h  deserialize.cc  deserialize.h  document.cc  document.h  encode.cc  encode.h  except.cc  except.h  except_base.cc  except_base.h  serdes.cc  serdes.h  serialize.cc  serialize.h  varint_encode.cc  varint_encode.h
